# scarab

./: .cargo-fmt-bypass  .editorconfig  .gitignore  .valgrind.supp  AUDIT_007_EXECUTION_PLAN.md  CHANGELOG.md  CLAUDE.md  CLIPBOARD_PLUGIN_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS_AND_NEXT_STEPS.md  Cargo.toml  DEPENDENCY_DIAGRAM.txt  DIAGNOSTICS_IMPLEMENTATION.md  EXECUTION_PLAN.md  FUSABI_CONFIG.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ISSUE_38.md  INSTALL_QUICK_START.md  ORCHESTRATION_PLAN.md  PERFORMANCE_BENCHMARKS_SUMMARY.md  PLAN_INDEX.md  PLUGIN_INSPECTOR_SUMMARY.md  PLUGIN_TOOLING_SUMMARY.md  README.md  RELEASE_NOTES_v0.1.0-alpha.13.md  RELEASE_NOTES_v0.2.0-alpha.2.md  RELEASE_VERIFICATION_SUMMARY.md  ROADMAP.md  TELEMETRY_IMPLEMENTATION_SUMMARY.md  TESTING.md  TESTING_IMPROVEMENTS_SUMMARY.md  VERIFICATION_QUICK_START.md  VERSION_SYNC_SUMMARY.md  WAVE1_TACTICAL_GUIDE.md  bootstrap_scarab.py  config.fsx  justfile  liblayers.rlib  scarab.desktop
crates/scarab-client/: Cargo.toml  MARKETPLACE.md  PLUGIN_INSPECTOR.md  SCRIPTING_IMPLEMENTATION.md
crates/scarab-client/benches/: gpu_operations.rs  text_rendering.rs  throughput.rs
crates/scarab-client/examples/: context_menu_demo.rs  diagnostics_demo.rs  marketplace_demo.rs  ratatui_bridge_demo.rs
crates/scarab-client/src/: graphics_inspector.rs  integration.rs  ipc.rs  lib.rs  main.rs  plugin_inspector.rs  prompt_markers.rs  safe_state.rs  telemetry_integration.rs  zones.rs
crates/scarab-client/tests/: ISSUE_168_IMPLEMENTATION_SUMMARY.md  README_RATATUI_TESTLIB.md  README_RATATUI_TESTLIB_V0.5.md  README_STATUS_BAR_COLOR_TESTS.md  SEQLOCK_TESTS_SUMMARY.md  STATUS_BAR_TESTS_README.md  TEST_INFRASTRUCTURE_SUMMARY.md  bevy_harness_stubs.rs  command_palette_ui_tests.rs  context_menu_tests.rs  daemon_error_mode_test.rs  golden_tests.rs  harness_examples.rs  harness_standalone.rs  headless_harness.rs  headless_poc.rs  integration_e2e.rs  ligature_test.rs  link_hints_tests.rs  marketplace_integration_tests.rs  navigation_integration.rs  newline_debug_test.rs  overlay_tests.rs  ratatui_testlib_cell_attributes.rs  ratatui_testlib_color_palette.rs  ratatui_testlib_osc133_zones.rs  ratatui_testlib_seqlock_verifier.rs  ratatui_testlib_smoke.rs  ratatui_testlib_test_auditor.rs  ratatui_testlib_ui_region_tester.rs  run_test_audit.rs  scroll_indicator_tests.rs  selection_tests.rs  smoke_tests.rs  status_bar_color_tests.rs  status_bar_region_tests.rs  test_auditor_impl.rs  theme_integration_tests.rs  ui_tests.rs
crates/scarab-clipboard/: ARCHITECTURE.txt  Cargo.toml  IMPLEMENTATION.md  README.md
crates/scarab-clipboard/src/: clipboard.rs  lib.rs  selection.rs
crates/scarab-clipboard/tests/: README.md  clipboard_tests.rs  plugin_tests.rs  run_tests.sh  selection_tests.rs
crates/scarab-config/: Cargo.toml  README.md  schema.json
crates/scarab-config/examples/: gruvbox-dark.toml  local-override.toml  navigation.toml  nord-theme.toml  poweruser.toml  slime-theme.toml
crates/scarab-config/src/: config.rs  error.rs  fusabi_loader.rs  lib.rs  loader.rs  plugin.rs  theme_resolver.rs  validation.rs  watcher.rs
crates/scarab-config/tests/: integration_tests.rs
crates/scarab-daemon/: Cargo.toml
crates/scarab-daemon/benches/: ipc_throughput.rs  plugin_benchmarks.rs  shared_memory.rs  vte_parsing.rs
crates/scarab-daemon/examples/: inspect_shmem.rs  kitty_graphics_demo.rs  smoke_harness.rs
crates/scarab-daemon/src/: ipc.rs  lib.rs  main.rs  main.rs.bak  orchestrator.rs  plugin_manager.rs  profiling.rs  vte.rs  vte_optimized.rs
crates/scarab-daemon/tests/: error_mode.rs  ipc_integration.rs  plugin_integration.rs  pty_error_path.rs  session_integration.rs  smoke_tests.rs  success_path.rs  tab_pane_multiplexing.rs  vte_conformance.rs
crates/scarab-mouse/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/scarab-mouse/src/: bevy_plugin.rs  bevy_plugin.rs.backup  bevy_plugin.rs.bak  bevy_plugin_impl.rs  click_handler.rs  context_menu.rs  grid_access.rs  lib.rs  mode.rs  selection.rs  types.rs
crates/scarab-mouse/tests/: README.md  click_handler_tests.rs  context_menu_tests.rs  integration_tests.rs  mode_tests.rs  selection_tests.rs  types_tests.rs
crates/scarab-nav/: Cargo.toml
crates/scarab-nav/src/: lib.rs
crates/scarab-palette/: Cargo.toml
crates/scarab-palette/src/: lib.rs
crates/scarab-panes/: Cargo.toml  README.md
crates/scarab-panes/src/: lib.rs
crates/scarab-panes/tests/: README.md  async_integration_tests.rs  complex_layout_tests.rs  edge_cases_tests.rs  pane_creation_tests.rs  pane_layout_tests.rs
crates/scarab-platform/: Cargo.toml
crates/scarab-platform/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/scarab-platform/tests/: platform_tests.rs
crates/scarab-plugin-api/: Cargo.toml
crates/scarab-plugin-api/src/: config.rs  context.rs  delight.rs  error.rs  host_bindings.rs  lib.rs  manifest.rs  menu.rs  navigation.rs  plugin.rs  types.rs
crates/scarab-plugin-api/tests/: fusabi_bindings_test.rs  integration_tests.rs
crates/scarab-plugin-compiler/: Cargo.toml  README.md
crates/scarab-plugin-compiler/src/: main.rs
crates/scarab-protocol/: Cargo.toml
crates/scarab-protocol/src/: lib.rs  terminal_state.rs  zones.rs
crates/scarab-protocol/tests/: integration_zones.rs
crates/scarab-session/: Cargo.toml  README.md
crates/scarab-session/src/: lib.rs  (+3 more)
crates/scarab-tabs/: Cargo.toml  README.md
crates/scarab-telemetry-hud/: Cargo.toml  README.md
crates/scarab-themes/: Cargo.toml  INTEGRATION.md  README.md  SUMMARY.md  THEMES.md
scarab/: CLAUDE_PROMPT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md
scarab/docs/: META_ORCHESTRATOR.md  PARALLEL_ORCHESTRATION_REPORT.md  PHASE4_COMPLETION_REPORT.md  ROADMAP.md  TESTING_SUMMARY.md  architecture_report.md  config-system-implementation.md  implementation-summary-fusabi-vm.md  phase4-final-report.md  phase4-summary.md  session-management.md  ui-features.md  ui-implementation-status.md
scarab/scripts/: build-all-platforms.sh  test_vte_realworld.sh
(+735 files in other folders)
