[workspace]
resolver = "2"
members = [
    "crates/scarab-client",
    "crates/scarab-daemon",
    "crates/scarab-protocol",
    "crates/scarab-plugin-api",
    "crates/fusabi-vm",
    "crates/fusabi-interpreter",
]

[workspace.dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_ui", "bevy_render", "x11", "wayland"] }
tokio = { version = "1.36", features = ["full"] }
portable-pty = "0.8"
alacritty_terminal = "0.24"
rkyv = { version = "0.7", features = ["validation"] }
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
cosmic-text = "0.11"
shared_memory = "0.12"
crossbeam = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
