[package]
name = "scarab-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bevy-based GUI client for Scarab terminal emulator"

[lib]
name = "scarab_client"
path = "src/lib.rs"

[[bin]]
name = "scarab-client"
path = "src/main.rs"

[dependencies]
scarab-protocol = { path = "../scarab-protocol", features = ["bevy"] }
scarab-config = { path = "../scarab-config" }
scarab-plugin-api = { path = "../scarab-plugin-api" }
scarab-mouse = { path = "../scarab-mouse" }
scarab-telemetry-hud = { path = "../scarab-telemetry-hud" }
scarab-nav-protocol = "0.1.0"
fusabi-frontend = { workspace = true }
fusabi-tui-core = { workspace = true }
fusabi-tui-widgets = { workspace = true }
fusabi-tui-render = { workspace = true }
bevy = { workspace = true }
bevy_egui = { version = "0.31" }
serde = { workspace = true }
serde_json = "1.0"
cosmic-text = { workspace = true }
anyhow = { workspace = true }
shared_memory = { workspace = true }
tokio = { workspace = true }
rkyv = { workspace = true }
crossbeam = { workspace = true }
regex = "1.10"
fuzzy-matcher = "0.3"
arboard = "3.3"
open = "5.0"
image = "0.25"
prost = "0.12"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.28"
chrono = "0.4"
base64 = "0.22"

# Profiling dependencies
tracy-client = { workspace = true, optional = true }
puffin = { workspace = true, optional = true }
profiling = { workspace = true, optional = true }
log = "0.4.29"

[dev-dependencies]
criterion = { workspace = true }
ratatui-testlib = { workspace = true, features = ["mvp", "sixel-image", "ipc"] }
tempfile = "3.8"
insta = "1.34"

[features]
default = []
plugin-inspector = []
profiling = ["dep:profiling", "dep:tracy-client", "dep:puffin"]
tracy = ["profiling", "tracy-client/default"]
puffin-profiling = ["profiling", "puffin/default"]

[[bench]]
name = "text_rendering"
harness = false

[[bench]]
name = "gpu_operations"
harness = false

[[bench]]
name = "throughput"
harness = false
