[package]
name = "scarab-clipboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Clipboard integration and selection management for Scarab terminal emulator"

[dependencies]
scarab-plugin-api = { path = "../scarab-plugin-api" }
scarab-protocol = { path = "../scarab-protocol" }
async-trait = "0.1"
log = "0.4"
arboard = "3.3"
parking_lot = "0.12"
regex = "1.10"
