[package]
name = "scarab-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration system for Scarab terminal emulator"

[[bin]]
name = "scarab-plugin"
path = "src/bin/scarab-plugin.rs"
required-features = ["registry"]

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
serde_json = "1.0"
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }
dirs = "5.0"
thiserror = "1.0"
tracing = "0.1"
fusabi-frontend = { workspace = true }
fusabi-vm = { workspace = true }
bevy-fusabi = { workspace = true }
bevy = { version = "0.15", default-features = false, features = ["bevy_asset"] }
bevy_ecs = { version = "0.15", default-features = false, features = ["bevy_reflect"] }
# Registry dependencies
reqwest = { version = "0.12", features = ["json"], optional = true }
sha2 = { version = "0.10", optional = true }
tokio = { workspace = true, optional = true }
# Use pure Rust crypto backend to avoid system dependencies like nettle
sequoia-openpgp = { version = "1.21", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto", "compression-deflate"], optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = ["registry"]
registry = ["dep:reqwest", "dep:sha2", "dep:tokio", "dep:sequoia-openpgp", "dep:base64"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.8"
