[package]
name = "scarab-mouse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mouse support and interaction plugin for Scarab terminal emulator"

[dependencies]
scarab-plugin-api = { path = "../scarab-plugin-api" }
scarab-protocol = { path = "../scarab-protocol" }
bevy = { workspace = true }
async-trait = "0.1"
log = "0.4"
parking_lot = "0.12"
serde = { workspace = true }
bitflags = "2.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
