[package]
name = "scarab-nav"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Navigation system for Scarab terminal emulator"

[dependencies]
# TODO: Re-enable when scarab-nav-protocol is available
# scarab-nav-protocol = { version = "0.1.0", path = "../../../scarab-nav-protocol/crates/scarab-nav-protocol" }
anyhow = { workspace = true }
serde = { workspace = true }
regex = "1.10"
