[package]
name = "scarab-nav"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Navigation system for Scarab terminal emulator"

[dependencies]
scarab-nav-protocol = "0.1.0"
scarab-plugin-api = { path = "../scarab-plugin-api" }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
regex = "1.10"
async-trait = "0.1"
prost = "0.12"
log = "0.4"
