[package]
name = "scarab-palette"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Color palette management for Scarab terminal emulator"

[dependencies]
scarab-plugin-api = { path = "../scarab-plugin-api" }
scarab-protocol = { path = "../scarab-protocol" }
async-trait = "0.1"
log = "0.4"
