[package]
name = "scarab-panes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pane and split management for Scarab terminal emulator"

[dependencies]
scarab-plugin-api = { path = "../scarab-plugin-api" }
scarab-protocol = { path = "../scarab-protocol" }
portable-pty = { workspace = true }
async-trait = "0.1"
log = "0.4"
serde = { workspace = true }
parking_lot = "0.12"
thiserror = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json = "1.0"
