[package]
name = "scarab-plugin-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Plugin API for Scarab terminal emulator"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
log = "0.4"
semver = "1.0"
thiserror = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
rand = "0.8"
chrono = "0.4"
bitflags = { version = "2.4", features = ["serde"] }
scarab-protocol = { path = "../scarab-protocol" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
