[package]
name = "scarab-plugin-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fusabi plugin compiler for Scarab terminal emulator"

[[bin]]
name = "scarab-plugin-compiler"
path = "src/main.rs"

[dependencies]
# Fusabi compilation
fusabi-frontend = { workspace = true }
fusabi-vm = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = "1.3"

# CLI and error handling
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# File I/O - removed std-path as it doesn't exist on crates.io
