[package]
name = "scarab-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "IPC protocol definitions for Scarab terminal emulator"

[dependencies]
bytemuck = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
bevy_ecs = { version = "0.15", default-features = false, optional = true }

[features]
default = []
bevy = ["bevy_ecs"]
