[package]
name = "scarab-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Session management for Scarab terminal emulator"

[dependencies]
scarab-plugin-api = { path = "../scarab-plugin-api" }
scarab-protocol = { path = "../scarab-protocol" }
async-trait = "0.1"
log = "0.4"
anyhow = "1.0"
parking_lot = "0.12"
portable-pty = "0.8"
russh = "0.44"
russh-keys = "0.44"
tokio = { version = "1.36", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"