[package]
name = "scarab-telemetry-hud"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Performance metrics HUD overlay for Scarab terminal emulator"

[dependencies]
bevy = { workspace = true }
scarab-plugin-api = { path = "../scarab-plugin-api" }
log = "0.4"
