[package]
name = "scarab-themes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Theme system and manager for Scarab terminal emulator"

[dependencies]
scarab-plugin-api = { path = "../scarab-plugin-api" }
scarab-protocol = { path = "../scarab-protocol" }
scarab-config = { path = "../scarab-config" }
async-trait = "0.1"
serde = { workspace = true }
serde_json = "1.0"
serde_yaml = "0.9"
toml = { workspace = true }
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
tokio = { workspace = true }
