[package]
name = "fusabi-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Parser
nom = "7.1"
nom_locate = "4.2"

# File watching
notify = "6.1"

# Bevy integration
bevy = { workspace = true, optional = true }

# Error handling
thiserror = "1.0"
anyhow = { workspace = true }

# Utilities
indexmap = "2.1"

[dev-dependencies]
criterion = "0.5"

[features]
default = ["bevy-integration"]
bevy-integration = ["bevy"]

[[bench]]
name = "parser_bench"
harness = false
