[package]
name = "fusabi-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
rkyv = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "vm_benchmark"
harness = false
