[package]
name = "scarab-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "scarab_client"
path = "src/lib.rs"

[[bin]]
name = "scarab-client"
path = "src/main.rs"

[dependencies]
scarab-protocol = { path = "../scarab-protocol" }
fusabi-interpreter = { path = "../fusabi-interpreter" }
bevy = { workspace = true }
cosmic-text = { workspace = true }
anyhow = { workspace = true }
shared_memory = { workspace = true }
tokio = { workspace = true }
rkyv = { workspace = true }
regex = "1.10"
fuzzy-matcher = "0.3"
