[package]
name = "scarab-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
scarab-protocol = { path = "../scarab-protocol" }
fusabi-vm = { path = "../fusabi-vm" }
tokio = { workspace = true }
portable-pty = { workspace = true }
vte = { workspace = true }
anyhow = { workspace = true }
shared_memory = { workspace = true }
crossbeam = { workspace = true }
rkyv = { workspace = true }
